  - Fix query problem in CmsLayoutStylesheetQuery with Mysql 5.7.
  - The {content} tag now supports passing data attributes to the generated textarea, for use by syntax hilighter and WYSIWYG modules. i.e: {content data-foo="bar"}
  - Refactoring of the amdin login code to be cleaner, more efficient, more secure.

  - #11080 - Parameter $adding in GetContentBlockFieldInput always FALSE.
  - #11093 - Bad error message in jquery.cmsms_autorefresh.js.
  - #11133 - is_email() fails on domain check

Navigator v1.0.4
  - Minor optimizations
  - Now use pagie in calculations of cacheid.

Installation Assistant v1.2.1
  - Only create dummy index.html files in subdirectories we created.
  - Clear cache after step 9.
  - A database account password is now required.
  - Upgrade routine now asks for, and tests database credentials.
  - Upgrade routine now rewrites the config.php file (but keeps a backup).
  - Set a few more preferences to reasonable defaults on install.. specifically related to site cleanup and performance.

CmsJobManager
  - New core module to handle queued asynchronous tasks.

Content Manager
  - Minor tweak to bulk delete pages.
  - Minor fix to the active tab when changing a template or design.
  - Now listen to the 'default parent page' user preference.
  - Fix minor XSS problem in the Admin if some loser puts JavaScript into the title field or alias field or menu text field.
  - Now allow filtering pages by owner, editor, template, or design.  Only for admins with Modify any page, or Manage all content permissions.
  - Fix problems with auto-refresh being too fast for some operations
  - Now auto scroll to the first matched page in a find.
  - Additional editors of a page cannot change the content type.  Only owners, or users with the Manage all Content permissions.
  - Fix a problem with the call to GetTabElements.

DesignManager
  - Move the designs tab of the main interface into third position.
  - Implement sorting in edit design.